@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST delayed_job-2.0.3.gem 26112 RMD160 9d7c7fee58c11486f78b27ad9566b9ba598c3ce1 SHA1 ceeefbb44b4e4a0c660eda338b338411d55fcb37 SHA256 e1b21ac1d3803fbb3f39b923a840b422d077be34be3e5472518b99f93e197a85
+DIST delayed_job-2.0.7.gem 24576 RMD160 253a4f3f079a5e36ab1a6d7ae8100961a303365b SHA1 d697269b0c463905234072f517dceca0f9705ae3 SHA256 393693d509409c3cd6d9179a8c7cbfa0d8cc2044865c12d047388b00929df9d5
 EBUILD delayed_job-2.0.3.ebuild 841 RMD160 8382774fe724045c2ff5fdd17919144245a0bd22 SHA1 48d4ebe9e8bf12c2b936bd1ca9ec7d8b7d674ce8 SHA256 4b70a9f6f7ad755e730bc24e575d0c98d7b89fb679d65d0129e68f0be4221ae5
-MISC ChangeLog 516 RMD160 dba7a0ba4d20f65bb149fa372c231f5be6e3c5d1 SHA1 ac23f0b3999bfc734c44ff4df3305e8a13bda703 SHA256 e7ef362a94af3a49dcc066ca737ea8134c51865e12dd496ef7d7befae27a9fd7
+EBUILD delayed_job-2.0.7.ebuild 850 RMD160 0a3fb38716dd031b459bc591a7aa48379edd905e SHA1 a4b833bba5501290c668ae6ed2458b8a176980f8 SHA256 7cd6b9552ac58b1cd5f25f5c0be986d1256bcb6a2c7c65e642b7b537dbcc6c13
+MISC ChangeLog 644 RMD160 4f44d880f86ab5663b7984099ba8ff63dbfef535 SHA1 81827904d0c2a4bacb75d9fe6012e2f49fe81727 SHA256 3fa77dcfe79e8b75713feb749942cae6cd1a8fa26c73b1b0444d20cedcd39aaa
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk4Nuv8ACgkQiIP6VqMIqNf8OgD/egYrQ/p4Mu10apEQCUGIw98t
-ILdse+uxmWjmgt7M8uQA/jpAC8K/ybXXZTSBBFMttC34SmMQeODw6c+96KLkQJ8d
-=vFC8
+iF4EAREIAAYFAk4NvCAACgkQiIP6VqMIqNeMwQEAl7STGYA0W1xg2IEAPDlVsZqi
+8FVvMN8dm7804BRcsaIA/1N9aQRngOPbb47IMabAWfZogCKUvSDSUX07/epm/t4p
+=+MUw
 -----END PGP SIGNATURE-----
